Fixed link spacing on bottton bar

--- a/style.css
+++ b/style.css
@@ -67,6 +67,13 @@ h1 {
     color: #b2e1ff
 }
 
+.main-1-3 {
+    margin-left: 33.3%; margin-right: 33.3%; margin-top: 10px;
+    background-color: #00000070;
+    border: solid 2px #d0b2ff;  padding: 5px; border-radius:  12px;
+    color: #b2e1ff
+}
+
 .bottom-bar {
     border-top: solid 2px #d0b2ff; background-color: #00000080; 
     text-align: center; color: #b2e1ff
@@ -127,4 +134,8 @@ background-image: url('/static/backround-blur.jpg'); background-repeat: no-repea
 
 .webrings {
     padding-left: 4%
+}
+
+.spaecing {
+    padding-inline: 8px
 }
